feat: homepage WIP, about us page, barbers page

--- a/client/app/about-us/about.html
+++ b/client/app/about-us/about.html
@@ -1,91 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Instacutz | Fresh Grooming On Demand</title>
-</head>
-
-<body>
-
-    <!-- Page Content -->
-    <div class="container">
-        <!-- Introduction Row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">About Us
-                    <small>Meet The Team!</small>
-                </h1>
-                <h4><p>Ever wanted to get a fresh haircut, but all the best salons in town were closed, or booked? </p></h4>
-                <h4><p>Instacutz brings the best barbers in town to you - on demand. </p></h4>
-                <p>1. Simply click 'Barbers' to see the list of barbers available, select the style you want(or custom style!). </p>
-                <p>2. Pay for your haircut quickly and easily with your credit card</p>
-                <p>3. You're Done! Check Your Phone for Text Notification about your order, and feel free to contact your barber who will be on his way.</p>
-            </div>
+<div class="about-us container">
+    <!-- Introduction Row -->
+    <div class="row">
+        <div class="col-xs-12">
+            <h1 class="page-header">About Us
+                <small>Meet The Team!</small>
+            </h1>
+            <h4><p>Ever wanted to get a fresh haircut, but all the best salons in town were closed, or booked? </p></h4>
+            <h4><p>Instacutz brings the best barbers in town to you - on demand. </p></h4>
+            <p>1. Simply click 'Barbers' to see the list of barbers available, select the style you want(or custom style!). </p>
+            <p>2. Pay for your haircut quickly and easily with your credit card</p>
+            <p>3. You're Done! Check Your Phone for Text Notification about your order, and feel free to contact your barber who will be on his way.</p>
         </div>
-
-        <!-- Team Members Row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Our Team</h2>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/ryanprofile.png" alt="">
-                <h3>Ryan James
-                    <small>Beard Expert</b></small>
-                </h3>
-                <p>Thinks a man's character can be judged instantaneously by his hair and beard. No more, no less.</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/alexprofile.png" alt="">
-                <h3>Alex Kim
-                    <small>Pomade Enthusiast</small>
-                </h3>
-                <p>Has been trying to grow out a moustache for the past 24 years.</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/aaronprofile.png" alt="">
-                <h3>Aaron Spafford
-                    <small>Head Zoolander</small>
-                </h3>
-                <p><q>I'm pretty sure there's a lot more to life than being really, really, ridiculously good looking. And I plan on finding out what that is!</q></p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/renanprofile.png" alt="">
-                <h3>Renan Deswarte
-                    <small>Buzzcut Connoisseur</small>
-                </h3>
-                <p>The hair makes the man. Well, that and other things</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/kevinprofile.png" alt="">
-                <h3>Kevin Ajula
-                    <small>Grooming Guru</small>
-                </h3>
-                <p>Weekly user of Instacutz himself</p>
-            </div>
-        </div>
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Instacutz 2015</p>
-                </div>
-                <!-- /.col-lg-12 -->
-            </div>
-            <!-- /.row -->
-        </footer>
-
     </div>
 
-</body>
+    <!-- Team Members Row -->
+    <div class="row">
+        <div class="col-lg-12">
+            <h2 class="page-header">Our Team</h2>
+        </div>
+        <div class="team-member col-lg-4 col-sm-6 text-center">
+            <img class="img-circle img-responsive img-center" src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/ryanprofile.png" alt="">
+            <h3>Ryan James
+                <small>Beard Expert</b></small>
+            </h3>
+            <p>Thinks a man's character can be judged instantaneously by his hair and beard. No more, no less.</p>
+        </div>
+        <div class="team-member col-lg-4 col-sm-6 text-center">
+            <img class="img-circle img-responsive img-center" src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/alexprofile.png" alt="">
+            <h3>Alex Kim
+                <small>Pomade Enthusiast</small>
+            </h3>
+            <p>Has been trying to grow out a moustache for the past 24 years.</p>
+        </div>
+        <div class="team-member col-lg-4 col-sm-6 text-center">
+            <img class="img-circle img-responsive img-center" src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/aaronprofile.png" alt="">
+            <h3>Aaron Spafford
+                <small>Head Zoolander</small>
+            </h3>
+            <p><q>I'm pretty sure there's a lot more to life than being really, really, ridiculously good looking. And I plan on finding out what that is!</q></p>
+        </div>
+        <div class="team-member col-lg-4 col-sm-6 text-center">
+            <img class="img-circle img-responsive img-center" src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/renanprofile.png" alt="">
+            <h3>Renan Deswarte
+                <small>Buzzcut Connoisseur</small>
+            </h3>
+            <p>The hair makes the man. Well, that and other things</p>
+        </div>
+        <div class="team-member col-lg-4 col-sm-6 text-center">
+            <img class="img-circle img-responsive img-center" src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/kevinprofile.png" alt="">
+            <h3>Kevin Ajula
+                <small>Grooming Guru</small>
+            </h3>
+            <p>Weekly user of Instacutz himself</p>
+        </div>
+    </div>
+    <hr>
 
-</html>
+
+
+</div>
+
+
