--- a/client/app/homepage/homepage.html
+++ b/client/app/homepage/homepage.html
@@ -13,32 +13,31 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/carousel4.png" alt="test">
+      <div class="item active" style="background-image:url('https://s3-us-west-1.amazonaws.com/haircut-on-demand/carousel4.png')">
         <div class="carousel-caption">
           <h3>See Why Our Users Love Us</h3>
           <h4><p><q>Instacutz has been a lifesaver. I don't have to worry about booking a haircut in advance anymore!</q></p></h4>
         </div>
       </div>
 
-      <div class="item">
-        <img src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/carousel2.png" alt="test">
+  
+      <div class="item" style="background-image:url('https://s3-us-west-1.amazonaws.com/haircut-on-demand/carousel2.png')">
         <div class="carousel-caption">
           <h3>Top-Rated Barbers</h3>
           <h4><p><q>Faisal is the most skilled and attentive stylist I've ever met</q></p></h4>
         </div>
       </div>
 
-      <div class="item">
-        <img src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/carousel3.png" alt="test">
+
+      <div class="item" style="background-image:url('https://s3-us-west-1.amazonaws.com/haircut-on-demand/carousel3.png')">
         <div class="carousel-caption">
           <h3>Quick & Easy Payment</h3>
           <h4><p>Pay in advance using your credit card using Stripe</p></h4>
         </div>
       </div>
 
-      <div class="item">
-        <img src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/carousel1.png" alt="test">
+  
+      <div class="item" style="background-image:url('https://s3-us-west-1.amazonaws.com/haircut-on-demand/carousel1.png')">
         <div class="carousel-caption">
           <h3>Unparalleled Customer Service</h3>
           <h4><p><q>Cyrus transforms my curly, out-of-control hair into an effortlessly natural style</q></p></h4>
@@ -62,14 +61,14 @@
   <div class="selection-link selection-link-barber col-xs-12 col-sm-6">
     <a href="#/barbers" class="link barber-link">
       <div class="inner-block">
-        Barber
+        Barbers
       </div>
     </a>
   </div>
   <div class="selection-link selection-link-style col-xs-12 col-sm-6">
     <a href="#/hairstyles" class="link style-link">
       <div class="inner-block">
-        Style
+        Styles
       </div>
     </a>
   </div>
