fix: remove booking button redirects to barber-list page

--- a/client/app/barbers/barber-profile.html
+++ b/client/app/barbers/barber-profile.html
@@ -51,7 +51,7 @@
     <div class="row order-block">
       <div class="col-xs-12 order-inner-block">
         <div class="col-xs-12 button-container">
-          <button type="submit" class="btn ">Order {{ barberInfos.name }}</button>
+          <button type="submit" class="btn ">Book {{ barberInfos.name }} Now</button>
         </div>
       </div>
     </div>
