--- a/client/app/index.html
+++ b/client/app/index.html
@@ -58,17 +58,17 @@
        <div id="navbar" class="collapse navbar-collapse" >
         <ul class="nav navbar-nav navbar-right" ng-controller='AuthController' style='float:right'>
           <li ng-controller="barberProfileController" class='nav navbar-nav'>
-            <a ng-click="checkOut()">Checkout
+            <!-- <a ng-click="checkOut()">Checkout
              <span class="glyphicon glyphicon-shopping-cart"></span> {{count.number}}
            </a>
-
+ -->
          </li>
-         <li class='nav navbar-nav' >
-          <a href='javascript:void(0)'>Welcome, {{ getUsername() }}!</a>
-        </li>
-        <li>
-          <a href='javascript:void(0)' ng-click='signout()'>{{Loginorout.loginorout}}</a>
-        </li>
+       <!--     <li class='nav navbar-nav' >
+            <a href='javascript:void(0)'>Welcome, {{ getUsername() }}!</a>
+          </li>
+          <li>
+            <a href='javascript:void(0)' ng-click='signout()'>{{Loginorout.loginorout}}</a>
+          </li> -->
       </ul>
     </div>
 
