--- a/client/app/barbers/barber-list/barber-list.html
+++ b/client/app/barbers/barber-list/barber-list.html
@@ -3,7 +3,12 @@
 <!-- List of Barbers -->
 <div class='container list-page barbers-list-page'>
   <div class="row">
-    <div ng-repeat="meal in data | filter:search | orderBy:'-'">
+    <form class="search-form pull-right">
+      <input type="text" placeholder="Search Hairstyles" class="search-input form-control" ng-model="hairstyleSearch">
+    </form>
+  </div>
+  <div class="row">
+    <div ng-repeat="meal in data | filter: hairstyleSearch">
       <div class="col-sm-4 col-lg-4 col -md-4 list-element-container">
         <div class="thumbnail list-element">
           <a href="#/barbers/profile" ng-click="setId(meal._id)" class="picture" style="background-image:url({{meal.portrait}})"></a>
