style: code cleanup on client

--- a/client/app/about-us/about.html
+++ b/client/app/about-us/about.html
@@ -6,10 +6,10 @@
                 <small>Meet The Team!</small>
             </h1>
             <h4><p>Ever wanted to get a fresh haircut, but all the best salons in town were closed, or booked? </p></h4>
-            <h4><p>Instacutz brings the best barbers in town to you - on demand. </p></h4>
+            <h4><p>InstaCutz brings the best barbers in town to you - on demand. </p></h4>
             <p>1. Simply click 'Barbers' to see the list of barbers available, select the style you want(or custom style!). </p>
             <p>2. Pay for your haircut quickly and easily with your credit card</p>
-            <p>3. You're Done! Check Your Phone for Text Notification about your order, and feel free to contact your barber who will be on his way.</p>
+            <p>3. You're Done! Check Your Phone for Text Notification about your order, and feel free to contact your barber who will be on his or her way.</p>
         </div>
     </div>
 
@@ -44,14 +44,14 @@
             <h3>Renan Deswarte
                 <small>Buzzcut Connoisseur</small>
             </h3>
-            <p>The hair makes the man. Well, that and other things</p>
+            <p>The hair makes the man. Well, that and other things.</p>
         </div>
         <div class="team-member col-lg-4 col-sm-6 text-center">
             <img class="img-circle img-responsive img-center" src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/kevinprofile.png" alt="">
             <h3>Kevin Ajula
                 <small>Grooming Guru</small>
             </h3>
-            <p>Weekly user of Instacutz himself</p>
+            <p>Weekly user of InstaCutz himself.</p>
         </div>
     </div>
     <hr>
