--- a/client/app/hairstyles/hairstyle-list/hairstyle-list.html
+++ b/client/app/hairstyles/hairstyle-list/hairstyle-list.html
@@ -1,6 +1,6 @@
 
 
-<!-- List of Barbers -->
+<!-- List of Hairstyles -->
 <div class='container list-page styles-list-page'>
   <div class="row">
     <div ng-repeat="meal in data | filter:search | orderBy:'-'">
