--- a/client/app/addMeal/addMeal.html
+++ b/client/app/addMeal/addMeal.html
@@ -1,4 +1,4 @@
-<div class="container" ng-app="foodly">
+<div class="container" ng-app="instacutz">
     <div class="row">
         <form class="form-horizontal">
             <fieldset required>
