--- a/client/app/index.html
+++ b/client/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="foodly">
+<html lang="en" ng-app="instacutz">
 
 <head>
   <meta charset="utf-8">
@@ -144,7 +144,7 @@
 
   <div class="row">
     <div class="col-xs-12">
-      <p>Copyright &copy; Instacutz 2015</p>
+      <p>Copyright &copy; InstaCutz 2015</p>
       <div class="footer-menu">
         <ul>
           <li>
