fix: signup flips signedIn flag

--- a/client/app/order/order.html
+++ b/client/app/order/order.html
@@ -2,7 +2,7 @@
   Stripe.setPublishableKey('pk_test_kL2LKwSIme8Q6KzTiLQ2ZPHz');
 </script>
 
-<div class="container" ng-app="foodly">
+<div class="container" ng-app="instacutz">
     <div class="row">
         <div class="container" style="margin-top: 60px">
             <h2>Shopping Cart</h2>
