fix:fixed modal button color

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -109,7 +109,7 @@
 
 <!--  TODO : Allow User to Leave Review or Rating In Modal -->
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade order-recap-modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -131,7 +131,7 @@
          <div> <span class="label label-primary">Please rate your stylist after your haircut!</span>
          </div>
          <br>
-         <span><a href="#/"><button type="button" class="btn btn-success btn-md" id="closeModal">Close</button></a></span>
+         <span><a href="#/"><button type="button" class="btn btn-md" id="closeModal">Close</button></a></span>
        </div>
      </div>
    </div>
