fix: restyled InstaCutz

--- a/client/app/homepage/homepage.html
+++ b/client/app/homepage/homepage.html
@@ -16,7 +16,7 @@
       <div class="item active" style="background-image:url('https://s3-us-west-1.amazonaws.com/haircut-on-demand/carousel4.png')">
         <div class="carousel-caption">
           <h3>See Why Our Users Love Us</h3>
-          <h4><p><q>Instacutz has been a lifesaver. I don't have to worry about booking a haircut in advance anymore!</q></p></h4>
+          <h4><p><q>InstaCutz has been a lifesaver. I don't have to worry about booking a haircut in advance anymore!</q></p></h4>
         </div>
       </div>
 
