--- a/client/app/index.html
+++ b/client/app/index.html
@@ -36,6 +36,9 @@
     <!-- Navbar that stays on the top of every page -->
     <nav class="navbar header-navbar navbar-inverse navbar-fixed-top">
       <div class="container">
+        <div class="instacutz-logo">
+          <img ng-src="assets/images/logo-white.png">
+        </div>
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
