docs: update README and API, move rating controller

--- a/client/app/about-us/about.html
+++ b/client/app/about-us/about.html
@@ -3,11 +3,10 @@
     <div class="row">
         <div class="col-xs-12">
             <h1 class="page-header">About Us
-                <small>Meet The Team!</small>
             </h1>
-            <h4><p>Ever wanted to get a fresh haircut, but all the best salons in town were closed, or booked? </p></h4>
-            <h4><p>InstaCutz brings the best barbers in town to you - on demand. </p></h4>
-            <p>1. Simply click 'Barbers' to see the list of barbers available, select the style you want(or custom style!). </p>
+            <h4><p>Need a fresh haircut, but don't have the time? </p></h4>
+            <h4><p>InstaCutz brings the best barbers in town to you — on demand. </p></h4>
+            <p>1. Simply click 'Barbers' to see the list of barbers available, select the style you want (or a custom style!). </p>
             <p>2. Pay for your haircut quickly and easily with your credit card</p>
             <p>3. You're Done! Check Your Phone for Text Notification about your order, and feel free to contact your barber who will be on his or her way.</p>
         </div>
